@@ -1,3 +1,4 @@
+* Add global search
 * Add toggle button for menu
 * Replace shortcuts by menu favorites
 * Move Plugins into toolbar Actions
